# dns2tcp-OSX

./: dns2tcpc  dns2tcpd
src/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in
src/client/: Makefile  Makefile.am  Makefile.in  command.c  options.c  queue.c  requests.c  session.c
src/client/.deps/: auth.Po  base64.Po  client.Po  command.Po  config.Po  dns.Po  list.Po  main.Po  memdump.Po  myrand.Po  options.Po  queue.Po  requests.Po  rr.Po  select.Po  session.Po  socket.Po
src/client/includes/: client.h  requests.h
src/common/: base64.c  mycrypto.c
src/common/includes/: dns.h  mycrypto.h
src/man/: Makefile  Makefile.in  dns2tcpc.1  dns2tcpd.1
src/server/: Makefile  Makefile.am  Makefile.in  auth.c
src/server/.deps/: auth.Po  crc16.Po  dns.Po  dns_decode.Po  list.Po  main.Po  mycrypto.Po  mystrnlen.Po  options.Po  queue.Po  requests.Po  rr.Po  server.Po  session.Po  socket.Po
